--- a/Cópia_de_[Imersão_IA_2ª_edição]_Código_Aula_04.ipynb
+++ b/Cópia_de_[Imersão_IA_2ª_edição]_Código_Aula_04.ipynb
@@ -33,7 +33,7 @@
         "#Configurações iniciais\n",
         "import google.generativeai as genai\n",
         "\n",
-        "GOOGLE_API_KEY=\"AIzaSyCWkLpOawDJs5an-M1cR3JdibCGxXZsoiQ\"\n",
+        "GOOGLE_API_KEY=\xxxxxxxxxxx\"\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ]
     },
